--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kaiserreich GFX Search</title>
+  <title>Better Iron GFX Search</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -262,7 +262,7 @@
 <body>
   <div class="container">
     <section class="header">
-      <h2 class="title">HoI4 GFX Search</h2>
+      <h2 class="title">Better Iron GFX Search</h2>
     </section>
     <div id="app">
       <div class="search-bar">
